--- a/payperks_demo/url_shortener/templates/url_shortener/index.html
+++ b/payperks_demo/url_shortener/templates/url_shortener/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,11 +13,30 @@
 
 
   </head>
-  <body>
-    <h1>Hello, world!</h1>
-
+  <body ng-app='urlShortenerApp'>
+     
+        <div class="panel-body"  ng-controller='urlShortenerCreateUrlCtrl'>
+         
+        
+             
+        
+            <form class="form-inline" role="form">
+            <input type="text" class="form-control"   ng-hide='generated' ng-model="url" />
+             <p ng-show='generated' >{[url]}</p>
+            <button class='btn' ng-hide='generated' ng-click="generateShortUrl()">Generate url</button>
+             <button  class='btn' ng-show='generated' clip-click='showCopySuccessMessage()' clip-copy="url">Copy to Clipboard</button>
+            <button class='btn' ng-show='generated' ng-click="resetUrl()">Generate another url</button>
+             
+           <span ng-show="error" >{[error]}</span>
+           <span ng-show="url_copied" class='span-success'>Copied to Clipboard!</span>
+           </form>
+        </div>
   </body>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.2.0/ZeroClipboard.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-mocks.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ng-clip/0.2.6/ng-clip.min.js"></script>
+  <script src="{% static 'app/scripts/controllers/url_shortener_create_controller.js' %}"></script>
 </html>
