--- a/payperks_demo/url_shortener/templates/url_shortener/index.html
+++ b/payperks_demo/url_shortener/templates/url_shortener/index.html
@@ -24,11 +24,11 @@
  
            </ul>
          </nav>
-         <h3 class="text-muted">PayPerks Url shortener</h3>
+         <h3 class="text-muted">PayPerks URL shortener</h3>
        </div>
 
        <div class="jumbotron">
-         <h1>Welcome to the PayPerks Url shortener</h1>
+         <h1>Welcome to the PayPerks URL shortener</h1>
         <p class="lead">You can create short urls below and view the ones already created, or directly <a href="/api/" >Browse the API</a></p>
        </div>
        
@@ -62,8 +62,8 @@
                    <table class="table table-striped">
                      <thead>
                        <tr>
-                         <th>Original url</th>
-                         <th>shortened url</th>
+                         <th>Original URL</th>
+                         <th>shortened URL</th>
                        </tr>
                      </thead>
                      <tbody>
