--- a/payperks_demo/url_shortener/templates/url_shortener/index.html
+++ b/payperks_demo/url_shortener/templates/url_shortener/index.html
@@ -20,7 +20,6 @@
        <div class="header clearfix">
          <nav>
            <ul class="nav nav-pills pull-right">
-             <li role="presentation" class="active"><a href="/api/" role="button">Browse the API</a></li>
  
            </ul>
          </nav>
@@ -93,7 +92,11 @@
   </body>
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.2.0/ZeroClipboard.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-mocks.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
+  <script src="{% static 'js/controllers.js' %}"></script>
   <script>
   var base_url = '{{request.get_host}}';
   $('#error_panel').hide();
