--- a/payperks_demo/url_shortener/templates/url_shortener/index.html
+++ b/payperks_demo/url_shortener/templates/url_shortener/index.html
@@ -35,24 +35,26 @@
        
      <div ng-controller='urlShortenerController'> 
        <h3>Create a new short URL</h1>
-        <div id='error_panel' class="panel panel-danger">
+         
+        <div id='error_panel' ng-show='error' class="panel panel-danger">
           <div class="panel-heading">There was an error shortening the URL</div>
-          <div id='error_content' class="panel-body">
-            Panel content
+          <div class="panel-body" >
+           {[error]}
           </div>
         </div>
-       <form class="form-inline" id='url_form' action="{% url 'create_new_shortened_url' %}" method="POST" enctype="multipart/form-data" class="form-horizontal" novalidate="">
+        
+       <form class="form-inline">
          {% csrf_token %}
          
          <div class="form-group">
            <label for="exampleInputName2">URL</label>
            <div class="input-group">
                  <span class="input-group-addon">@</span>
-                 <input name="original" id="original" class="form-control" type="text" value="">
+                 <input class="form-control" type="text" ng-model='original'>
                </div>
            
          </div>
-         <button type="submit" id='create_url' class="btn btn-default">Create a shortened version</button>
+         <button ng-click='shortenUrl()' class="btn btn-primary">Create a shortened version</button>
        </form>
        
        
@@ -96,37 +98,8 @@
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.2.0/ZeroClipboard.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-mocks.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ng-clip/0.2.6/ng-clip.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
   <script src="{% static 'js/controllers.js' %}"></script>
-  <script>
-  var base_url = '{{request.get_host}}';
-  $('#error_panel').hide();
-  var show_error = function (error) {
-    $('#error_content').text(error);
-    $('#error_panel').show();
-  };
-  $('#create_url').click(
-    function(event){
-      return
-      event.preventDefault();
-      var url = $('#original').val();
-      if (url == null) {
-        show_error('Please input an url')
-        return
-      }
-      if (!(_.includes(url, 'http://') || _.includes(url, 'https://'))) {
-        show_error('Please input a valid url starting with http:// or https://')
-        return
-      }
-      if (!_.includes(url, base_url)) {
-        show_error('Please input a valid url starting with http://' + base_url)
-        return
-      }
-      $('#url_form').submit();
-    }
-  
-  )
-  
-  </script>
 
 </html>
