--- a/payperks_demo/url_shortener/templates/url_shortener/index.html
+++ b/payperks_demo/url_shortener/templates/url_shortener/index.html
@@ -70,7 +70,7 @@
                      <tbody>
                 	     <tr ng-repeat='url in shortenedUrls'>
                         <td>{[url.original]}</td>
-                        <td> <a href="{[url.shortened]}">{[url.shortened]}</a></td>
+                        <td> <a href="/m/{[url.shortened]}/">{[url.shortened]}</a></td>
                         
                 	     </tr>
                       
