--- a/payperks_demo/url_shortener/templates/url_shortener/index.html
+++ b/payperks_demo/url_shortener/templates/url_shortener/index.html
@@ -98,6 +98,79 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-mocks.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ng-clip/0.2.6/ng-clip.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
-  <script src="{% static 'js/controllers.js' %}"></script>
+  <script >
+  var app = angular.module('urlShortenerApp', ['ngClipboard']).config(function ($interpolateProvider, $httpProvider, ngClipProvider){
+    $interpolateProvider.startSymbol('{[').endSymbol(']}');
+    $httpProvider.defaults.xsrfCookieName = 'csrftoken';
+    $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
+    $httpProvider.defaults.headers.post = {'Content-Type': 'application/x-www-form-urlencoded'};
+  });;
+
+  app.factory('urlShortener', function($http, $q) {
+	
+  	var urlShortener = {};
+	
+  	var init = function () {
+  		var deferred = $q.defer();
+	
+  		$http.get('api/short_urls/').success(function(urls, status, headers, config) {
+  						 deferred.resolve(urls)
+					 
+  			        }); 
+			
+  		return deferred.promise
+  	}
+	
+  	var shorten_url = function (url) {
+  	  var url_deferred = $q.defer();	
+  	  $http.post('/api/short_urls/', $.param(url)).success(
+  		    function (url) {	
+  				 url_deferred.resolve(url)	    
+  			});
+  	   return url_deferred.promise
+  	}
+	
+  	urlShortener.init = init
+  	urlShortener.shorten_url = shorten_url
+  	return urlShortener
+      
+  });
+			
+			
+  app.controller('urlShortenerController', function($scope, $http, urlShortener) {
+  
+    var initScope = function () {
+    	urlShortener.init().then(function(urls){
+        console.log(urls)
+        $scope.shortenedUrls = urls.results;
+    	})
+      $scope.error = null;
+      $scope.original = null;
+    };
+	
+    initScope();
+
+   	$scope.shortenUrl = function () {
+      var base_url = '127.0.0.1:8000/'
+      if ($scope.original == null) {
+        $scope.error = 'Please input an url';
+        return
+      }
+      if (!(_.includes($scope.original, 'http://') || _.includes($scope.original, 'https://'))) {
+        $scope.error = 'Please input a valid url starting with http:// or https://';
+        return
+      }
+      if (!_.includes($scope.original, base_url)) {
+        $scope.error = 'Please input a valid url starting with http://' + base_url;
+        return
+      }
+  		urlShortener.shorten_url({original: $scope.original, shortened: ''}).then(function(url){
+  		   initScope();
+  		})
+  	}
+	
+  	});
+			  
+  </script>
 
 </html>
