adding base url

--- a/payperks_demo/url_shortener/templates/url_shortener/index.html
+++ b/payperks_demo/url_shortener/templates/url_shortener/index.html
@@ -151,7 +151,7 @@
     initScope();
 
    	$scope.shortenUrl = function () {
-      var base_url = '127.0.0.1:8000/'
+      var base_url = 'powerful-citadel-2869.herokuapp.com/'
       if ($scope.original == null) {
         $scope.error = 'Please input an url';
         return
