--- a/payperks_demo/url_shortener/templates/url_shortener/index.html
+++ b/payperks_demo/url_shortener/templates/url_shortener/index.html
@@ -34,13 +34,13 @@
        <h3>Create a new short URL</h1>
          
         <div id='message_panel' ng-show='error' class="panel panel-danger">
-          <div class="panel-heading">There was an message shortening the URL</div>
+          <div class="panel-heading">There was an error shortening the URL</div>
           <div class="panel-body" >
            {[error]}
           </div>
         </div>
         <div ng-show='message' class="panel panel-info">
-          <div class="panel-heading">There was an message shortening the URL</div>
+          <div class="panel-heading">Thanks, you've shortened an URL</div>
           <div class="panel-body" >
            {[message]}
           </div>
